Refactor explore.html for improved clarity in content descriptions, update index.js to enhance password gate functionality with mobile compatibility, and modify styles.css to prevent scrolling issues when the password gate is active.

--- a/explore.html
+++ b/explore.html
@@ -210,7 +210,7 @@
         This wasn’t an initiative that came out of the usual roadmap 
         but as a digital media company, we had to keep up with the times. 
         Younger audiences were moving away from long-form articles, 
-        and with AI in the mix, there wasa a need to design a new economic engine before the current one erodes.
+        and with AI in the mix, there was a need to design a new consumption pattern before the current one erodes.
       </p>
 
 <br>
@@ -436,8 +436,9 @@
       <p></p>
       <h3 class="feature-headline">Article Digest: AI-Curated Article Summaries</h3>
       <p class="feature-description">
-        Quick, digestible content format that spotlights contextual summaries from the article, 
-        allowing users to get the gist of multiple stories without the commitment of reading full-length articles.
+        Quick, digestible content format that extracts contextual summaries from the article, 
+        allowing users to get the gist of an article without necesarilly fully commiting to reading it. With that being said, digest were designed in a way that we also provided a path-way for the 
+        user to also read the full article if they'd like to read more about the topic at hand.
       </p>
     </div>
          <div class="feature-image image-item">
@@ -466,8 +467,10 @@ digests more enaged with, aligning user psychology with business goals.
       <p>
       <h3 class="feature-headline">Social Commentary Layer: Polls</h3>
       <p class="feature-description">
-        Polls were generated from article content and  added a low-effort social layer letting users quickly share their take on a topic and instantly see how it stacked up against public opinion. 
-        It was a subtle but effective way to break people out of their echo chambers and spark curiosity beyond their usual perspective. </p>
+        Polls were generated from article content and  added a low-effort social layer letting users quickly share their 
+        take on a topic and instantly see how it stacked up against the public's perspective. 
+        It was a subtle but effective way to break people out of their echo chambers and spark curiosity beyond 
+        their usual point of view. </p>
     </div>
     <div class="feature-image image-item">
       <img src="AI polls flow.png" alt="Bite-sized news interface" loading="lazy">
