Fix typos in explore.html for improved readability and update styles.css to increase font size of feature descriptions for better visibility.

--- a/explore.html
+++ b/explore.html
@@ -453,7 +453,7 @@
       <p class="feature-description">
 Reader Reactions was designed to give users an extrinsic motivation to engage with content 
 they might typically overlook. This blend of social influence and gamified feedback made 
-digests more enaged with, aligning user psychology with business goals.
+digests more engaged with, aligning user psychology with business goals.
       </p>
     </div>
     <div class="feature-image image-item">
@@ -467,7 +467,7 @@ digests more enaged with, aligning user psychology with business goals.
       <p>
       <h3 class="feature-headline">Social Commentary Layer: Polls</h3>
       <p class="feature-description">
-        Polls were generated from article content and  added a low-effort social layer letting users quickly share their 
+        Polls were generated from article content and added a low-effort social layer letting users quickly share their 
         take on a topic and instantly see how it stacked up against the public's perspective. 
         It was a subtle but effective way to break people out of their echo chambers and spark curiosity beyond 
         their usual point of view. </p>
