Refine content description in explore.html for the AI-Curated Article Summaries feature, enhancing clarity and readability while maintaining user engagement.

--- a/explore.html
+++ b/explore.html
@@ -436,9 +436,9 @@
       <p></p>
       <h3 class="feature-headline">Article Digest: AI-Curated Article Summaries</h3>
       <p class="feature-description">
-        Quick, digestible content format that extracts contextual summaries from the article, 
-        allowing users to get the gist of an article without necesarilly fully commiting to reading it. With that being said, digest were designed in a way that we also provided a path-way for the 
-        user to also read the full article if they'd like to read more about the topic at hand.
+        A quick, digestible content format that pulls contextual summaries from source article; giving users the gist without commiting to a full read. 
+        That said, Digests were intentionally designed to include a clear pathway to the full article, 
+        for those who wanted to dive deeper into the topic.
       </p>
     </div>
          <div class="feature-image image-item">
