Refactor about.html to remove emoji from "Favorite Quotes" for a cleaner presentation. Update styles.css to adjust padding, border radius, and background color for improved aesthetics and mobile responsiveness of radio pills.

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
     <p style="color: #555555; font-size: 10px;" id="status">Prompts</p>
     <div id="radioPills">
       <div class="radio-pill" data-value="2">
-        <span>🗣️ Favorite Quotes</span>
+        <span>Favorite Quotes</span>
       </div>
 
       
