Refine text in explore.html to clarify the need for adapting to changing information consumption habits and emphasize the company's challenge in addressing the shift from long-form content.

--- a/explore.html
+++ b/explore.html
@@ -223,7 +223,7 @@
         This wasn’t an initiative that came out of our usual roadmap, 
         but as a digital media company, we had to keep up with the times. 
         Younger audiences were moving away from long-form articles, 
-        and with AI in the mix, there was a need to design a news reading experience that leveraged trends in information consumption patterns.
+        and with AI in the mix, there was a need to create an experience that leveraged shifiting habits within current information consumption patterns.
       </p>
 
 <br>
@@ -241,7 +241,7 @@
       <h2 id="challenge">The Challenge</h2>
       <p>
         All of this, especially the rise of AI, made the shift away 
-        from long-form content feel like a more pertinent challenge to tackle.</p>
+        from long-form content feel like a more pertinent challenge for the company to tackle.</p>
         <p>
         As a response, our Chief Product Officer brought together a 
         small team and gave us a clear challenge:
