Refine text in explore.html to enhance clarity regarding the need for an experience that aligns with emerging information consumption patterns, reflecting the company's adaptation to current trends.

--- a/explore.html
+++ b/explore.html
@@ -223,7 +223,7 @@
         This wasn’t an initiative that came out of our usual roadmap, 
         but as a digital media company, we had to keep up with the times. 
         Younger audiences were moving away from long-form articles, 
-        and with AI in the mix, there was a need to create an experience that leveraged shifting habits within current information consumption trends.
+        and with AI in the mix, there was a need to create an experience that leveraged emerging patterns in how people consume information today.
       </p>
 
 <br>
