Correct minor text errors in explore.html for improved clarity and accuracy regarding the legacy homepage description, including punctuation adjustments and phrasing refinements.

--- a/explore.html
+++ b/explore.html
@@ -301,9 +301,9 @@
 
 </div>
 
-<p style="font-family: 'Courier New', monospace; font-size: 18px; color: #666;">*Legacy homepage i
-  s the Forbes.com landing page that existed prior the launch of Explore. It was the page 
-  typically surfaced to majority of Forbes' users before its redesign in September 2025.
+<p style="font-family: 'Courier New', monospace; font-size: 18px; color: #666;">*Legacy homepage is 
+  the Forbes.com landing page that existed prior the launch of Explore. It was the page 
+  surfaced to majority of Forbes' users before its redesign in September, 2025.
 </p>
 
 <br>
