Correct phrasing in explore.html to clarify the legacy homepage description, changing "is" to "was" for improved accuracy.

--- a/explore.html
+++ b/explore.html
@@ -301,7 +301,7 @@
 
 </div>
 
-<p style="font-family: 'Courier New', monospace; font-size: 18px; color: #666;">*Legacy homepage is 
+<p style="font-family: 'Courier New', monospace; font-size: 18px; color: #666;">*Legacy homepage was 
   the Forbes.com landing page that existed prior the launch of Explore. It was the page 
   surfaced to majority of Forbes' users before its redesign in September, 2025.
 </p>
