Enhance phrasing in explore.html to improve clarity regarding the team's direction in rethinking information consumption, emphasizing the unified goal of creating an AI-first reading experience.

--- a/explore.html
+++ b/explore.html
@@ -311,10 +311,11 @@
       
       <h3>Research & Discovery</h3>
       <p>
-        Given the broad challenge of rethinking information consumption for a modern publishing company,</p>
+        Given the broad challenge of rethinking information consumption for a modern publishing company,the team 
+        had no shortage of directions to consider.</p>
 
         <p class="lead-paragraph">
-          the team had no shortage of directions to consider. But from the start, one goal united us: 
+           But from the start, one goal united us: 
           to <b>build a delightful, AI-first reading experience for news.</b>
          
 </p>
