Refine text in explore.html to enhance clarity and readability in user perspectives on information consumption, emphasizing the value of peer commentary and a cleaner reading experience.

--- a/explore.html
+++ b/explore.html
@@ -414,8 +414,7 @@
               Reader to Reader Perspectives
           </h4>
           <p>
-            User 1 valued browsing the comment section as a social layer; using other reader's 
-            takes for context, validation or different perspectives, and quick summaries beyond the article itself.</p>
+            User 1 valued the comment section as a social layer; using other readers' takes for context, validation, new perspectives, and even quick summaries that extended beyond the article itself</p>
         </div>
       </div>
 
@@ -434,12 +433,15 @@
             Low Friction Engagement
         </h4>
         <p>
-          Both users favored <b>effortless information consumption</b>: User 2 quickly scanned multiple bites, 
-          while User 1 scrolled through comments opting for a "cleaner reading experience" in an attempt to avoid the actual 
-          article, which was often cluttered with ads and other distractions 
-          like recommended content and recirculation units.</p></div>
+          Both users favored <b>effortless information consumption</b>: User 2 quickly scanned 
+          multiple bite-sized summaries, while User 1 preferred scrolling through comments opting for 
+          a "<i>cleaner reading experience</i>" by choosing to avoid the article itself, which was often cluttered with ads, 
+          recommended content, and recirculation units.</p></div>
 <br>
-<p style="text-transform: uppercase; font-size:14px; color:#5b4b34"><b>From here, we created this How Might We Question:</b> <br> <p class="'lead-paragraph" style="font-size:18px;">How might we create a fast, snackable news experience enriched by peer commentary,<b> where getting the gist of many stories feels more approachable than a deep dive into one?</b></p>  <br>    
+<p style="text-transform: uppercase; font-size:14px; color:#5b4b34"><b>From here, we created this How Might We Question:</b> <br> 
+  <p class="'lead-paragraph" style="font-size:18px;">How might we create a fast, snackable news
+     experience—enriched by peer commentary—where <b>getting the gist of multiple 
+    stories feels more approachable than diving deep into just one?</b></p>  <br>    
 
 
       <h2 id="key-features">Key Features</h2>
