Refine wording in explore.html to enhance clarity by changing "extrinsic motivation" to "extrinsic reason" in the Reader Reactions section, improving user engagement description.

--- a/explore.html
+++ b/explore.html
@@ -470,7 +470,7 @@
       <p>
       <h3 class="feature-headline">Social Commentary Layer: Reader Reactions</h3>
       <p class="feature-description">
-Reader Reactions was designed to give users an extrinsic motivation to engage with content 
+Reader Reactions were designed to give users an extrinsic reason to engage with content 
 they might typically overlook. This blend of social influence and gamified feedback made 
 digests more engaged with, aligning user psychology with business goals.
       </p>
