Add new feature card in explore.html for 'Low Friction Engagement: Next Read' highlighting user interaction design inspired by social media, enhancing the reading experience with smooth transitions between Digests.

--- a/explore.html
+++ b/explore.html
@@ -496,6 +496,27 @@ digests more engaged with, aligning user psychology with business goals.
     </div>
   </div>
 
+
+
+
+  <div class="feature-card">
+    <div class="feature-content">
+      <p>
+      <h3 class="feature-headline">Low Friction Engagement: Next Read</h3>
+      <p class="feature-description">
+        Not a feature per se, but a key interaction design principle we kept in mind 
+        was inspired by how users effortlessly swipe through Reels, Shorts, or TikToks. 
+        While the constraint wasn’t the platform itself but rather the media type, 
+        we still aimed to recreate that same sense of flow and lightness.</p>
+        <p>Users could scroll within a Digest panel, 
+        click “Next Read,” and smoothly transition to the next Digest using a scroll-to-top interaction. It was our way of interpolating swipeable, 
+        snackable behavior into a text-based, web-native format.</p>
+    </div>
+    <div class="feature-image image-item">
+      <img src="Next Read.gif" alt="Bite-sized news interface" loading="lazy">
+    </div>
+  </div>
+
 </div>
 
 <br>
