Enhance explore.html by adding a loading animation for the 'Next Read' GIF, improving user experience during content loading.

--- a/explore.html
+++ b/explore.html
@@ -513,7 +513,10 @@ digests more engaged with, aligning user psychology with business goals.
         snackable behavior into a text-based, web-native format.</p>
     </div>
     <div class="feature-image image-item">
-      <img src="Next Read.gif" alt="Bite-sized news interface" loading="lazy">
+      <div class="gif-container">
+        <div class="gif-loader"></div>
+        <img src="Next Read.gif" alt="Bite-sized news interface" loading="lazy" class="gif-loading">
+      </div>
     </div>
   </div>
 
