Add interactive GIF functionality in explore.html and index.js, enhancing user engagement with hover/click interactions. Update styles.css to support new interactive elements and improve visual feedback.

--- a/explore.html
+++ b/explore.html
@@ -476,7 +476,7 @@ digests more engaged with, aligning user psychology with business goals.
       </p>
     </div>
     <div class="feature-image image-item">
-      <img src="Reader Reaction.png" alt="Bite-sized news interface" loading="lazy">
+      <img src="Reader Reaction.png" alt="Interface for Reader Reactions" loading="lazy">
     </div>
   </div>
 
@@ -492,7 +492,7 @@ digests more engaged with, aligning user psychology with business goals.
         their usual point of view. </p>
     </div>
     <div class="feature-image image-item">
-      <img src="AI polls flow.png" alt="Bite-sized news interface" loading="lazy">
+      <img src="AI polls flow.png" alt="AI Polls Phases" loading="lazy">
     </div>
   </div>
 
@@ -513,9 +513,24 @@ digests more engaged with, aligning user psychology with business goals.
         snackable behavior into a text-based, web-native format.</p>
     </div>
     <div class="feature-image image-item">
-      <div class="gif-container">
+      <div class="gif-container interactive-gif">
         <div class="gif-loader"></div>
-        <img src="Next Read.gif" alt="Bite-sized news interface" loading="lazy" class="gif-loading">
+        <img src="Next Read.gif" 
+             alt="Next Read Interaction" 
+             loading="eager" 
+             class="gif-loading gif-interactive"
+             data-gif-src="Next Read.gif"
+             data-static-src="Next Read Preview.png">
+        <div class="gif-play-indicator">
+          <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="12" cy="12" r="10" fill="rgba(255,255,255,0.9)"/>
+            <path d="M10 8l6 4-6 4V8z" fill="black"/>
+          </svg>
+        </div>
+        <p class="gif-annotation">
+          <span class="desktop-text">Hover to play</span>
+          <span class="mobile-text">Click to play</span>
+        </p>
       </div>
     </div>
   </div>
