--- a/explore.html
+++ b/explore.html
@@ -504,13 +504,17 @@ digests more engaged with, aligning user psychology with business goals.
       <p>
       <h3 class="feature-headline">Low Friction Engagement: Next Read</h3>
       <p class="feature-description">
-        Not a feature per se, but a key interaction design principle we kept in mind 
-        was inspired by how users effortlessly swipe through Reels, Shorts, or TikToks. 
-        While the constraint wasn’t the platform itself but rather the media type, 
-        we still aimed to recreate that same sense of flow and lightness.</p>
-        <p>Users could scroll within a Digest panel, 
-        click “Next Read,” and smoothly transition to the next Digest using a scroll-to-top interaction. It was our way of interpolating swipeable, 
-        snackable behavior into a text-based, web-native format.</p>
+        Not a feature per se, but a core interaction design principle was inspired 
+        by the effortless swipe behavior seen in Reels, Shorts, and TikToks. 
+        While the constraint was the media type—not the platform—we still aimed to 
+        recreate that same sense of flow and lightness.</p>
+
+        <p></p>
+
+        <p class="feature-description">Instead of traditional page-to-page loads, users could scroll within a Digest panel, 
+          click “Next Read,” and instantly transition to the next story within that topic
+          via a scroll-to-top interaction. It was our way of interpolating swipeable, 
+          snackable behavior into a fast, text-based, web-native experience</p>
     </div>
     <div class="feature-image image-item">
       <div class="gif-container interactive-gif">
