Update explore.html to improve clarity in the 'Next Read' feature description by adding a comma for better readability and flow in user interaction narrative.

--- a/explore.html
+++ b/explore.html
@@ -512,7 +512,7 @@ digests more engaged with, aligning user psychology with business goals.
         <p></p>
 
         <p class="feature-description">Instead of traditional page-to-page loads, users could scroll within a Digest panel, 
-          click “Next Read,” and instantly transition to the next story within that topic
+          click “Next Read,” and instantly transition to the next story within that topic,
           via a scroll-to-top interaction. It was our way of interpolating swipeable, 
           snackable behavior into a fast, text-based, web-native experience</p>
     </div>
