Enhance explore.html by adding punctuation to improve clarity in user perspectives, ensuring complete sentences in the Reader to Reader Perspectives section and the 'Next Read' feature description.

--- a/explore.html
+++ b/explore.html
@@ -414,7 +414,7 @@
               Reader to Reader Perspectives
           </h4>
           <p>
-            User 1 valued the comment section as a social layer; using other readers' takes for context, validation, new perspectives, and even quick summaries that extended beyond the article itself</p>
+            User 1 valued the comment section as a social layer; using other readers' takes for context, validation, new perspectives, and even quick summaries that extended beyond the article itself.</p>
         </div>
       </div>
 
@@ -514,7 +514,7 @@ digests more engaged with, aligning user psychology with business goals.
         <p class="feature-description">Instead of traditional page-to-page loads, users could scroll within a Digest panel, 
           click “Next Read,” and instantly transition to the next story within that topic,
           via a scroll-to-top interaction. It was our way of interpolating swipeable, 
-          snackable behavior into a fast, text-based, web-native experience</p>
+          snackable behavior into a fast, text-based, web-native experience.</p>
     </div>
     <div class="feature-image image-item">
       <div class="gif-container interactive-gif">
