Optimize image slider functionality in explore.html and index.js by changing image loading to 'eager' for improved performance. Enhance mobile responsiveness in styles.css with new styles for the image slider, ensuring better user experience across devices.

--- a/explore.html
+++ b/explore.html
@@ -478,8 +478,8 @@ digests more engaged with, aligning user psychology with business goals.
     <div class="feature-image image-item">
       <div class="image-slider-container">
         <div class="image-slider">
-          <img src="RR Light Mode.png" alt="Reader Reactions Light Mode" class="slider-image slider-before" loading="lazy">
-          <img src="RR Dark Mode.png" alt="Reader Reactions Dark Mode" class="slider-image slider-after" loading="lazy">
+          <img src="RR Light Mode.png" alt="Reader Reactions Light Mode" class="slider-image slider-before" loading="eager">
+          <img src="RR Dark Mode.png" alt="Reader Reactions Dark Mode" class="slider-image slider-after" loading="eager">
           <div class="slider-handle">
             <div class="slider-button">
               <svg width="38" height="38" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
