Update explore.html to refine titles and descriptions for clarity, emphasizing news & information consumption patterns. Enhance index.js with mobile GIF visibility observer for improved user experience. Adjust styles.css for better mobile responsiveness and visual presentation of GIFs and feature items.

--- a/work.html
+++ b/work.html
@@ -83,7 +83,7 @@
           <span class="context-tag">Consumer AI</span>
         </div>
       <h3>Forbes: Explore</h3>
-      <p>Rethinking information consumption habits amidst the proliferation of AI.</p>
+      <p>Rethinking news & information consumption habits amidst the proliferation of AI.</p>
     </main>
     <div class="project-content">
       <div class="gif-container">
