Update footer text color in about.html, explore.html, index.html, and work.html for consistent styling across pages.

--- a/explore.html
+++ b/explore.html
@@ -629,7 +629,7 @@ higher rate of Digests opened per user session.
       </button>
   
     </div>
-    <p style="color: #7d7c83; font-size: 12px;">© 2025 | Adé Obayomi</p>
+    <p style="color: #737373; font-size: 12px;">© 2025 | Adé Obayomi</p>
 
   </div>
   <div id="lightbox" class="lightbox" tabindex="-1" aria-modal="true" role="dialog" style="display:none;">
