--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </button>
   
     </div>
-    <p style="color: #7d7c83; font-size: 12px;">© 2025 | Adé Obayomi</p>
+    <p style="color: #737373; font-size: 12px;">© 2025 | Adé Obayomi</p>
   </div>
   <div id="lightbox" class="lightbox" tabindex="-1" aria-modal="true" role="dialog" style="display:none;">
     <div class="lightbox-content">
