Update explore.html for improved clarity in user quotes and descriptions, and adjust styles.css for a subtle background color change. Update binary .DS_Store file.

--- a/explore.html
+++ b/explore.html
@@ -422,7 +422,7 @@
            Bite Size, Quick Delivery News
           </h4>
           <p>User 2's quote suggested they valued speed and brevity over 
-            the current model of digital publishing which supports long-form reading by way of dense articles.</p>
+            today's model of digital publishing which supports long-form reading by way of dense articles.</p>
         </div>
 
       </div>
@@ -443,7 +443,7 @@
         </h4>
         <p>
           Both users favored <b>effortless information consumption</b>: User 2 quickly scanned 
-          multiple bite-sized pieces of information. User 1 on the other hand, preferred scrolling through comments; avoiding the article
+          multiple bite-sized pieces of information. User 1, on the other hand, preferred scrolling through comments; avoiding the article
           itself to seek a "<i>cleaner reading experience</i>" free from the clutter of ads, 
           recommended content, and recirculation units.</p></div>
 <br>
@@ -465,7 +465,7 @@
       <h3 class="feature-headline">Article Digest: AI-Curated Article Summaries</h3>
       <p class="feature-description">
         A quick, digestible content format that pulls contextual summaries from the source article; giving users the gist without commiting to a full read. 
-        That said, Digests were intentionally designed to include a clear pathway to the full article; 
+        With that being said, Digests were intentionally designed to include a clear pathway to the full article; 
         for those who wanted to dive deeper into the topic.
       </p>
     </div>
@@ -516,7 +516,7 @@ higher rate of Digests opened per user session.
       <h3 class="feature-headline">Social Commentary Layer: Polls</h3>
       <p class="feature-description">
         Polls were generated from article content and added a low-effort social layer that let users quickly share their 
-        take on a topic and instantly see how it stacked up against the public's perspective. 
+        take on a topic and instantly see how it aligned with, or stacked against, the public's perspective. 
         It was a subtle but effective way to break people out of their echo chambers and spark curiosity beyond 
         their usual point of view. </p>
     </div>
