--- a/explore.html
+++ b/explore.html
@@ -578,6 +578,8 @@ higher rate of Digests opened per user session.
 
 <br>
 
+<div></div>
+
 <h2 id="lessons">Lessons Learned</h2>
       
        <!-- Hero Image -->
