Refine user quotes and descriptions in explore.html for enhanced clarity, improving the narrative around information consumption and reader engagement. Adjust wording for better readability and flow.

--- a/explore.html
+++ b/explore.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Forbes Explore: Rethinking News & Information Consumption Patterns Amidst The Proliferation of AI</title>
+  <title>Forbes Explore: Rethinking Information Consumption Patterns Amidst The Proliferation of AI</title>
   <link rel="icon" type="image/png" href="Notionme.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -167,7 +167,7 @@
 
     <!-- Article Header -->
     <header class="article-header">
-      <h1>Forbes Explore: Rethinking News & Information Consumption Patterns Amidst The Proliferation of AI</h1>
+      <h1>Forbes Explore: Rethinking Information Consumption Patterns Amidst The Proliferation of AI</h1>
       
       <!-- Feature Info Box -->
       <div class="feature-info">
@@ -252,7 +252,7 @@
       <br>
 
       <div class="highlight-box" style="margin-bottom:24px;">
-        <h3>"Rethink News & Information Consumption Patterns Amidst The Proliferation 
+        <h3>"Rethink Information Consumption Patterns Amidst The Proliferation 
           Of AI And Create A Homepage To Represent That."</h3>
         
       </div>
@@ -270,7 +270,7 @@
   <h2 id="results">Results & Impact</h2>
   <ul class="results-list">
     <li>
-      On April 1st, 2025, Explore: A News Briefing Experience powered by  Forbes AI, 
+      On April 1st, 2025, Explore: A News Briefing Experience powered by Forbes AI, 
       launched in a silent beta through a post on LinkedIn by Forbes’ Chief Digital & Information Officer.</li>
     <li>In 4 months, Explore had over 10k users; with users spending an average of 90+ seconds on the page.</li>
     <li>The launch also gave the team and I the opportunity to speak about Explore at the company wide Global Strategy Meeting.</li>
@@ -443,8 +443,8 @@
         </h4>
         <p>
           Both users favored <b>effortless information consumption</b>: User 2 quickly scanned 
-          multiple bite-sized pieces of information. User 1, on the other hand, preferred scrolling through comments; avoiding the article
-          itself to seek a "<i>cleaner reading experience</i>" free from the clutter of ads, 
+          multiple bite-sized pieces of information. While User 1, on the other hand, preferred scrolling through comments; avoiding the article
+          to seek a "<i>cleaner reading experience</i>" free from the visual noise of ads, 
           recommended content, and recirculation units.</p></div>
 <br>
 <h3>From here, we created this How Might We Question:</h3> 
@@ -486,7 +486,7 @@
       <p>
       <h3 class="feature-headline">Social Commentary Layer: Reader Reactions</h3>
       <p class="feature-description">
-At its core,<b> news is social and reactionary.</b> Reader Reactions were inspired by the nudge theory by surfacing 
+At its core,<b> news is social and reactionary.</b> Reader Reactions were inspired by the nudge theory; surfacing 
 lightweight social cues; such as: 'Readers found this Insightful'— to signal value and encourage engagement with content 
 that another user might otherwise have overlooked.</p> <br> <p class="feature-description"> By using social proof as a peer-to-peer recommendation signal, Reader Reactions encouraged more engagement with Digests, leading to a 
 higher rate of Digests opened per user session.
