Refactor explore.html for improved clarity in text and user quotes, enhancing readability. Update index.js to show the toolbar after fonts load, ensuring a smoother user experience. Adjust styles.css to prevent layout shifts during font loading by initially hiding the toolbar.

--- a/explore.html
+++ b/explore.html
@@ -240,8 +240,8 @@
 
       <h2 id="challenge">The Challenge</h2>
       <p>
-        All of this, especially the rise of AI, made the shift away 
-        from long-form content feel like a more urgent challenge to tackle as a company.</p>
+        All of this, especially the rise of AI, made the shift 
+        from long-form content feel like a more urgent challenge for the company to tackle.</p>
         <p>
         As a response, our Chief Product Officer brought together a 
         small team and gave us a clear challenge:
@@ -408,7 +408,7 @@
           </h4>
           <p>
             User 1 valued the comment section as a social layer; using other readers' takes for context, 
-            a new perspective, and even a quick summary that extends beyond the article itself.</p>
+            a new perspective, and even a quick summary that extended beyond the article itself.</p>
         </div>
 
         <div class="code-block">
@@ -443,8 +443,8 @@
         </h4>
         <p>
           Both users favored <b>effortless information consumption</b>: User 2 quickly scanned 
-          multiple bite-sized pieces of information. While User 1, on the other hand, preferred scrolling through comments; avoiding the article
-          to seek a "<i>cleaner reading experience</i>" free from the visual noise of ads, 
+          multiple bite-sized pieces of information while User 1, on the other hand, preferred scrolling through comments; avoiding the article
+          itself to seek a "<i>cleaner reading experience</i>" free from the visual noise of ads, 
           recommended content, and recirculation units.</p></div>
 <br>
 <h3>From here, we created this How Might We Question:</h3> 
