Enhance image slider functionality in index.js by adding height adjustment for better responsiveness and touch event handling for improved drag performance. Update explore.html for clearer user interaction instructions. Modify styles.css to optimize touch targets and ensure consistent image display across devices.

--- a/explore.html
+++ b/explore.html
@@ -567,7 +567,7 @@ higher rate of Digests opened per user session.
           </svg>
         </div>
         <p class="gif-annotation">
-          <span class="desktop-text">Hover to play (Focus on the Next Read) </span>
+          <span class="desktop-text">Hover to play <I>(Focus on the Next Read Interaction)</I> </span>
           <span class="mobile-text">Click to play</span>
         </p>
       </div>
