--- a/explore.html
+++ b/explore.html
@@ -242,7 +242,7 @@
       <h2 id="challenge">The Challenge</h2>
       <p>
         All of this, especially the rise of AI, made the shift 
-        from long-form content feel like an urgent challenge for the company to address.</p>
+        from long-form content feel like an urgent threat for the company to address.</p>
         <p>
         As a response, our Chief Product Officer brought together a 
         small team and gave us a clear challenge:
@@ -599,8 +599,8 @@ higher rate of Digests opened per user session.
 
       <p class="lead-paragraph">
         This was my first time working on a 0-to-1 product while shipping to an established brand's user base, albeit a fractional one. 
-        The initiative provided me with invaluable opportunites such as frequently checking in with C-level stakeholders, presenting Explore to the company, 
-        and experimenting with design decisions, which directly drove measurable improvements in real user behavior.
+        The initiative provided me with invaluable opportunities such as, <b>frequently checking in with C-level stakeholders, presenting Explore to the company, 
+        and lastly making bets and experimenting with design decisions</b>; the latter of which directly drove measurable improvements in real user behavior.
         <br>
         <br>
         Though Explore no longer exists, the experiment’s success has influenced other product initiatives, 
