Update explore.html to replace images, enhance captions, and refine text for improved clarity on news consumption and its significance. Update binary files for UX research images.

--- a/explore.html
+++ b/explore.html
@@ -335,11 +335,19 @@
       <!-- Process Images -->
       <div class="image-grid">
         <div class="image-item">
-          <img src="UXresearch2.PNG" alt="User research and persona development" loading="lazy">
+          <img src="UXresearch1.PNG" alt="User research and persona development" loading="lazy">
+          <p class="image-caption">User Research Qualitative Coding.</p>
+        </div>
+        <div class="image-item">
+          <img src="UXresearch2.PNG" alt="Wireframe exploration" loading="lazy">
           <p class="image-caption">User Research Qualitative Coding.</p>
         </div>
         <div class="image-item">
           <img src="UXresearch3.PNG" alt="Wireframe exploration" loading="lazy">
+          <p class="image-caption">User Research Qualitative Coding.</p>
+        </div>  
+        <div class="image-item">
+          <img src="UXresearch4.PNG" alt="Wireframe exploration" loading="lazy">
           <p class="image-caption">User Research Qualitative Coding.</p>
         </div>
       </div>
@@ -453,9 +461,9 @@
       </div>
 <br>
 <h3>From Here, We Created This How Might We Statement:</h3> 
-  <p class="'lead-paragraph" style="font-size:18px;">How might we create a fast, snackable news
-     experience—enriched by peer commentary—where <b>getting the gist of multiple 
-    stories feels more approachable than diving deep into just one dense article?</b></p>  <br>    
+  <p class="'lead-paragraph" style="font-size:18px;">How might we design a quick, snackable news
+     experience that leverages peer commentary <b>allowing users to grasp the essence of multiple stories more
+      easily than reading a single dense article.</b></p>  <br>    
 
 
 
@@ -476,9 +484,16 @@
       <p></p>
       <h3 class="feature-headline">Article Digest: AI-Curated Summaries</h3>
       <p class="feature-description">
-        A quick, digestible content format that pulls contextual summaries from the source article; giving users the gist, without commiting to a full read. 
-        With that being said, Digests were intentionally designed to include a clear pathway to the full article; 
-        for those who wanted to dive deeper into the topic.
+        Digests were designed to save users time in the exploration phase 
+        of news consumption by pulling 3 contextual summaries directly from the 
+        source article. The 3 contextual outputs provided to readers were the <b>bread-and-butter summary</b>, followed 
+        by a <b>key quote</b> that grounds the story in facts, and concludes with a <b>“why it matters”</b> 
+        lens that connects the article to a broader framework of events, trends, & implications; making news consumption more meaningful on a personal basis.
+        <br>
+        <br>
+        This quick, digestible format allows users to grasp not just what happened, but <b>why 
+        it’s significant in a larger context</b>, without committing to a full read. At the same time, 
+        it provides a clear pathway to the full article for those who want to dive deeper.
       </p>
     </div>
          <div class="feature-image image-item">
