Refactor styles.css for improved layout and responsiveness, transitioning project grid to a flexbox layout and enhancing mobile image handling. Update explore.html for minor text corrections and adjustments to user quotes. Modify work.html to improve image loading and presentation for better user experience.

--- a/explore.html
+++ b/explore.html
@@ -386,7 +386,7 @@
 
           <p style="font-size: 14px;">User 2 in relation to what makes Instagram an ideal platform 
             for news consumption.</p>
-          <h3>" Like with instagram, I like the idea of getting various pieces of information quickly. "</h3>
+          <h3>" Like with Instagram, I like the idea of getting various pieces of information quickly. "</h3>
   </div>
   
 </div>
