Update styles.css to reduce padding for improved layout consistency and modify work.html to enhance image class naming for better clarity in mobile presentation.

--- a/work.html
+++ b/work.html
@@ -91,11 +91,11 @@
             <span class="desktop-text">Hover to play</span>
           </p>
         </div>
-        <div class="mobile-static-image mobile-only">
+        <div class="image-item preloaded mobile-only">
           <img src="Feature intro Thumbnail.png" 
                alt="User interface for Forbes: Explore." 
                loading="eager" 
-               class="mobile-project-image">
+               class="loaded">
         </div>
         <div id="tagdiv">
           <span class="context-tag">0→1 Product Design</span>
